--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -30,7 +30,7 @@ jobs:
         id: codecoverage
         uses: ./
         with:
-          code_coverage_path: tests/nunit-csharp-samples/syntax
+          code_coverage_path: coverage/jacoco.xml
           report_name:  code_coverage-${{ matrix.os }}
           report_title: Sample Code Coverage (${{ matrix.os }})
           github_token: ${{ secrets.GITHUB_TOKEN }}
