--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -6,7 +6,7 @@ on:
     inputs:
       skip_check_run: 
         description: |
-          false
+          Skip Check Run
         required: false
       github_token: 
         description: |
